--- a/whitepaper/revnet.tex
+++ b/whitepaper/revnet.tex
@@ -77,15 +77,15 @@ The price ceiling encourages participants to join the network early. The earlier
 
 \begin{figure}[h]\label{fig:single-ceiling-curve}
   \centering
-  \includegraphics[width=\textwidth]{figures/single-ceiling-curve.png}
-   \caption{This figure shows how $T_n$ (the number of \$tokens issued per ETH in the $n^{th}$ generation) varies across 50 generations with a 5\% price ceiling curve $(r_c = 0.05)$. Note that $T_n$ decreases rapidly at first, then more gradually as $T_n$ tends towards 0 over many generations.}
+  \includegraphics[width=\textwidth]{figures/single-ceiling-percentage.png}
+   \caption{This figure shows how $T_t$ (the number of \$tokens issued per ETH at time $t$) varies over 50 days with a 5\% price ceiling increase percentage $(c = 0.05)$. Note that $T_t$ decreases rapidly at first, then more gradually as $T_n$ tends towards 0 over time. This figure assumes a price ceiling increase frequency of one day.}
 \end{figure}
 
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=\textwidth]{figures/multi-ceiling-curves.png}
-  \caption{This figure shows how $T_n$ varies over 50 generations with 1\%, 5\%, 10\%, and 25\% price ceiling curves $(r_c = 0.01, 0.05, 0.1, 0.25)$. Note that for greater price ceiling curves, $T_n$ tends towards 0 more quickly.}
+  \includegraphics[width=\textwidth]{figures/multi-ceiling-percentages.png}
+  \caption{This figure shows how $T_t$ varies over 50 days with 1\%, 5\%, 10\%, and 25\% price ceiling increase percentages $(c = 0.01, 0.05, 0.1, 0.25)$. Note that for greater price ceiling increase percenteages, $T_t$ tends towards 0 more quickly.}
 \end{figure}
 
 \subsection{Price Floor}
@@ -111,8 +111,8 @@ Unless $i$ is 0, as more \$tokens are destroyed (in other words, the larger $x$ 
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=\textwidth]{figures/multi-floor-curves.png}
-  \caption{This figure shows price floor functions with price floor curves of 0\%, 33\%, 66\%, and 100\% $(r_f = 0, 0.33, 0.66, 1)$. The $x$ axis represents the percentage of the total \$token supply being destroyed, and the $y$ axis represents the percentage of the network's ETH which is reclaimed. Note that with a 0\% price floor curve $(r_f = 0)$, reclaim amounts scale linearly with respect to the number of tokens being destroyed---a network participant which destroys 1\% of the total token supply receives 1\% of the network's ETH. The larger the price floor curve $r_f$, the less ETH earlier reclaimers receive.}
+  \includegraphics[width=\textwidth]{figures/multi-floor-intensities.png}
+  \caption{This figure shows several price floors with price floor tax intensities of 0\%, 33\%, 66\%, and 100\% $(i = 0, 0.33, 0.66, 1)$. The $x$ axis represents the percentage of the total \$token supply being destroyed, and the $y$ axis represents the percentage of the network's ETH which is reclaimed. Note that with a 0\% price floor tax intensity $(i = 0)$, reclaim amounts scale linearly with respect to the number of tokens being destroyed---a network participant which destroys 1\% of the total token supply receives 1\% of the network's ETH. The larger the price floor tax intensity $i$, the less ETH earlier reclaimers receive.}
 \end{figure}
 
 For a participant to maximize their financial return under the shareholder value model, they must ``time the market'', selling their equity in a company at the time when the market considers it to be most valuable. This may not line up with the company's intrinsic value, as markets frequently overvalue or undervalue companies based on social trends, investor hype, and other extrinsic factors. In contrast, \textit{the greatest loss a participant can incur under a Revnet model is the difference between the price ceiling and price floor at the time they purchase \$tokens}. As \$tokens are created or destroyed, the price floor will continue to rise. Participants do not have to worry about the value of their tokens going to zero, and in most cases, to maximize their return, they only have to continue holding their tokens. Revnets make it easier for participants to be intelligent market actors.
